# Arab_transcription

./: .gitignore  ArabText.py  ArabTransliterator.py  README.md  __init__.py  alphabet.py  arabic_text.py  mapping.py  phonetic.py  pyproject.toml  setup.py  test.txt  transliterator.py
_types/: __init__.py
arab_transliterator/: README.md  arab_text.py  mapping.py  transliterator.py
arab_transliterator/_types/: __init__.py  linked_queue.py
arab_transliterator/docs/: README.md
env/: pyvenv.cfg
